--- a/assets/sass/v2/_all.scss
+++ b/assets/sass/v2/_all.scss
@@ -6,6 +6,7 @@
 @import './factor-poll-verification';
 @import './callout';
 @import './device-challenge';
+@import './device-enrollment';
 @import './select-authenticator';
 @import './webauthn';
 @import './okta-verify';
