--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -11,34 +11,53 @@
 //SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
 //-----------------------------------------------------------
 @font-face {
-  font-family: 'montserrat';
-  src: url('../font/montserrat-light-webfont.eot');
-  src: url('../font/montserrat-light-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../font/montserrat-light-webfont.woff') format('woff'),
-    url('../font/montserrat-light-webfont.ttf') format('truetype'),
-    url('../font/montserrat-light-webfont.svg#Montserrat-Light') format('svg');
+  font-family: "ApercuPro";
+  src: url("../font/Apercu-Regular.woff") format("woff"),
+    url("../font/Apercu-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'montserrat';
-  src: url('../font/montserrat-regular-webfont.eot');
-  src: url('../font/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../font/montserrat-regular-webfont.woff') format('woff'),
-    url('../font/montserrat-regular-webfont.ttf') format('truetype'),
-    url('../font/montserrat-regular-webfont.svg#Montserrat-SemiBold') format('svg');
+  font-family: "ApercuPro";
+  src: url("../font/Apercu-Bold.woff") format("woff"),
+    url("../font/Apercu-Bold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'okticon';
-  src: url('../font/okticon.eot');
-  src: url('../font/okticon.eot?#iefix') format('embedded-opentype'),
-    url('../font/okticon.woff') format('woff'),
-    url('../font/okticon.ttf') format('truetype'),
-    url('../font/okticon.svg#okticon') format('svg');
+  font-family: "montserrat";
+  src: url("../font/montserrat-light-webfont.eot");
+  src: url("../font/montserrat-light-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("../font/montserrat-light-webfont.woff") format("woff"),
+    url("../font/montserrat-light-webfont.ttf") format("truetype"),
+    url("../font/montserrat-light-webfont.svg#Montserrat-Light") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "montserrat";
+  src: url("../font/montserrat-regular-webfont.eot");
+  src: url("../font/montserrat-regular-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("../font/montserrat-regular-webfont.woff") format("woff"),
+    url("../font/montserrat-regular-webfont.ttf") format("truetype"),
+    url("../font/montserrat-regular-webfont.svg#Montserrat-SemiBold")
+      format("svg");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "okticon";
+  src: url("../font/okticon.eot");
+  src: url("../font/okticon.eot?#iefix") format("embedded-opentype"),
+    url("../font/okticon.woff") format("woff"),
+    url("../font/okticon.ttf") format("truetype"),
+    url("../font/okticon.svg#okticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
