--- a/assets/sass/common/shared/helpers/_variables.scss
+++ b/assets/sass/common/shared/helpers/_variables.scss
@@ -22,10 +22,11 @@ $error-color: #e34843;
 $teach-color: #835ab1;
 
 // Text
-$body-font-family: 'montserrat', Arial, Helvetica, sans-serif;
+$body-font-family: "ApercuPro", Arial, Helvetica, sans-serif;
 $body-font-size: 13px;
 $small-font-size: 12px;
-$code-font-family: 'anonymous-pro', 'Andale Mono', 'Courier New', Courier, monospace;
+$code-font-family: "anonymous-pro", "Andale Mono", "Courier New", Courier,
+  monospace;
 $text-color-dark: #5e5e5e;
 $text-color-light: #a7a7a7;
 $text-color-darker: #444;
@@ -70,5 +71,3 @@ $box-shadow-default: 0 2px 0 rgba(175, 175, 175, 0.12);
 $black: #000;
 $white: #fff;
 $red: #f00;
-
-
