--- a/assets/sass/modules/_footer.scss
+++ b/assets/sass/modules/_footer.scss
@@ -8,5 +8,12 @@
   .dot-separator {
     font-weight: bold;
   }
-}
 
+  .js-help {
+    display: none;
+  }
+
+  .js-help-links {
+    display: flex !important;
+  }
+}
