--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -28,8 +28,13 @@
     li {
       margin-top: 15px;
     }
+    .link.js-help-link {
+      display: none;
+    }
+    li + li {
+      margin-left: 32px;
+    }
   }
-
 }
 
 .enroll-choices {
