--- a/assets/sass/common/shared/o-forms/_o-form.scss
+++ b/assets/sass/common/shared/o-forms/_o-form.scss
@@ -4,7 +4,7 @@
 // TODO: Fix lint
 // scss-lint:disable all
 
-@import './o-form-variable';
+@import "./o-form-variable";
 
 /*
  * Okta form styles
@@ -37,6 +37,7 @@
 }
 .o-form-fieldset {
   display: block;
+  position: relative;
 }
 
 /* end clearfix */
@@ -77,7 +78,6 @@
   .o-form-input-group-controls {
     width: 100%;
   }
-
 }
 
 /* Input and label */
@@ -125,7 +125,8 @@
       border: none;
     }
   }
-  .input-fix, .textarea-fix {
+  .input-fix,
+  .textarea-fix {
     border-radius: 3px;
     width: 100%;
     box-sizing: border-box;
@@ -141,7 +142,6 @@
     min-height: 30px;
     max-width: 100% !important;
   }
-
 
   select {
     width: 62%;
@@ -201,7 +201,7 @@
     border-radius: 0;
     white-space: nowrap;
 
-    input[type=number] {
+    input[type="number"] {
       padding-bottom: 0;
     }
   }
@@ -269,7 +269,7 @@
       border-left-width: 1px;
       border-top-right-radius: 0;
       left: -1px;
-      width: 101%;  /* This could break with wider fields */
+      width: 101%; /* This could break with wider fields */
     }
   }
   select:first-child + .o-form-control.chzn-container-active.chzn-with-drop {
@@ -280,7 +280,7 @@
     .chzn-drop {
       border-left-width: 1px;
       right: -1px;
-      width: 101%;  /* This could break with wider fields */
+      width: 101%; /* This could break with wider fields */
     }
   }
 }
@@ -322,7 +322,7 @@
 
 .o-form-multi-input-2 .o-form-control,
 .o-form-multi-input-3 .o-form-control,
-.o-form-multi-input-4 .o-form-control{
+.o-form-multi-input-4 .o-form-control {
   margin-top: 0;
 }
 
@@ -338,7 +338,7 @@
 }
 
 .o-form-multi-input-3 .o-form-control,
-.o-form-multi-input-3 .o-form-input-group  {
+.o-form-multi-input-3 .o-form-input-group {
   width: 32%;
 }
 
@@ -348,7 +348,7 @@
 }
 
 .o-form-multi-input-2 .o-form-input-group,
-.o-form-multi-input-3 .o-form-input-group  {
+.o-form-multi-input-3 .o-form-input-group {
   margin-top: 0 !important;
 }
 
@@ -391,7 +391,6 @@
   width: 100% !important;
 }
 
-
 /*
  * Custom input/select hybrid
  */
@@ -412,12 +411,11 @@
   box-sizing: border-box;
 }
 
-.text-select.chzn-with-drop input[type=text] {
+.text-select.chzn-with-drop input[type="text"] {
   border-color: #888;
   border-bottom-left-radius: 0;
   box-shadow: 0 -1px 0 0 #aaa inset;
 }
-
 
 /*
  * Custom checkboxes, radios
@@ -454,21 +452,20 @@
   }
   label {
     @extend %custom-checkbox-label;
-    background: url('../img/ui/forms/checkbox-01.png') no-repeat;
+    background: url("../img/ui/forms/checkbox-01.png") no-repeat;
   }
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2),
-only screen and (min-resolution: 2dppx) {
+  only screen and (min-device-pixel-ratio: 2),
+  only screen and (min-resolution: 2dppx) {
   .custom-checkbox {
     label {
-      background: url('../img/ui/forms/checkbox-01@2x.png') no-repeat;
+      background: url("../img/ui/forms/checkbox-01@2x.png") no-repeat;
       background-size: 50px 1155px;
     }
   }
 }
-
 
 .custom-radio {
   @extend %custom-checkbox;
@@ -477,16 +474,16 @@ only screen and (min-resolution: 2dppx) {
   }
   label {
     @extend %custom-checkbox-label;
-    background: url('../img/ui/forms/radiobutton-01.png') no-repeat;
+    background: url("../img/ui/forms/radiobutton-01.png") no-repeat;
   }
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2),
-only screen and (min-resolution: 2dppx) {
+  only screen and (min-device-pixel-ratio: 2),
+  only screen and (min-resolution: 2dppx) {
   .custom-radio {
     label {
-      background: url('../img/ui/forms/radiobutton-01@2x.png') no-repeat;
+      background: url("../img/ui/forms/radiobutton-01@2x.png") no-repeat;
       background-size: 50px 820px;
     }
   }
@@ -522,12 +519,11 @@ only screen and (min-resolution: 2dppx) {
   border-color: #dadada #dddddd;
   margin-top: -1px;
   border-radius: 0 0 3px 3px;
-  text-align: right;
+  // text-align: right;
 
   .button + .button {
     margin-left: 10px;
   }
-
 }
 
 .o-form-button-bar-no-border {
@@ -536,7 +532,6 @@ only screen and (min-resolution: 2dppx) {
 
 /* Pillbar: tabs styled like buttons, place in a toolbar */
 /* TODO: Convert to SASS */
-
 
 .o-form-toolbar.ui-tabs {
   margin: 0;
@@ -588,11 +583,18 @@ only screen and (min-resolution: 2dppx) {
   background-color: $primary-medium-color;
 }
 
-.o-form-toolbar.ui-tabs .o-form-pillbar.ui-tabs-nav li.ui-state-active:last-child > a {
+.o-form-toolbar.ui-tabs
+  .o-form-pillbar.ui-tabs-nav
+  li.ui-state-active:last-child
+  > a {
   border-right-color: $primary-medium-border-color;
 }
 
-.o-form-toolbar.ui-tabs .o-form-pillbar.ui-tabs-nav li.ui-state-active + li > a {
+.o-form-toolbar.ui-tabs
+  .o-form-pillbar.ui-tabs-nav
+  li.ui-state-active
+  + li
+  > a {
   border-left-width: 0;
   padding-left: 21px;
 }
@@ -605,7 +607,6 @@ only screen and (min-resolution: 2dppx) {
 .o-form-pillbar.ui-tabs-nav li + li {
   margin-left: 0;
 }
-
 
 /* Edit/read toggle variant */
 /* The primary heading for the form and can contain the edit-toggle button */
@@ -659,8 +660,6 @@ only screen and (min-resolution: 2dppx) {
 }
 
 /* Headings and explain text */
-
-
 
 /* A sub section within a form, not the title bar */
 .o-form-head {
@@ -754,7 +753,6 @@ only screen and (min-resolution: 2dppx) {
 .o-form-title-bar + .o-form-theme {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-
 }
 
 .o-form-has-title-bar {
@@ -820,7 +818,6 @@ only screen and (min-resolution: 2dppx) {
   width: 75%;
 }
 
-
 /*
  * States
  */
@@ -878,7 +875,20 @@ only screen and (min-resolution: 2dppx) {
 
 /* Label top */
 
-.o-form-label-top .o-form-label,
+.o-form-label-top .o-form-label {
+  width: auto;
+  position: absolute;
+  z-index: 1;
+  top: -7px;
+  left: 10px;
+  display: inline-block;
+  padding: 0 1px 0 4px;
+  label {
+    background-color: white;
+    font-size: 12px;
+    padding-left: 2px;
+  }
+}
 .o-form-label-top .o-form-input {
   width: 100%;
 }
@@ -897,7 +907,7 @@ only screen and (min-resolution: 2dppx) {
 }
 
 .o-form-read-mode .custom-radio label,
-.o-form-read-mode.custom-radio label{
+.o-form-read-mode.custom-radio label {
   background-position: -16px -313px !important; /* can't be sure of hierachy so using important */
 }
 
@@ -992,10 +1002,9 @@ only screen and (min-resolution: 2dppx) {
   }
 }
 
-
 /* checkbox and radio disabled */
 .o-form-disabled.custom-checkbox label,
-.o-form-disabled .custom-checkbox label  {
+.o-form-disabled .custom-checkbox label {
   background-position: -16px -13px; /* prevents change on hover */
 }
 
@@ -1063,9 +1072,9 @@ only screen and (min-resolution: 2dppx) {
   }
 
   .chzn-container-active .chzn-single {
-    -webkit-box-shadow: 0 1px 2px rgba(175,175,175, 0.3);
-    -moz-box-shadow:  0 1px 2px rgba(175,175,175, 0.3);
-    box-shadow:  0 1px 2px rgba(175,175,175, 0.3);
+    -webkit-box-shadow: 0 1px 2px rgba(175, 175, 175, 0.3);
+    -moz-box-shadow: 0 1px 2px rgba(175, 175, 175, 0.3);
+    box-shadow: 0 1px 2px rgba(175, 175, 175, 0.3);
     border: 1px solid #888;
   }
 
@@ -1080,7 +1089,6 @@ only screen and (min-resolution: 2dppx) {
 .o-form .infobox-error + form .o-form-focus {
   border-color: #888 !important;
 }
-
 
 /* data-list styles */
 
