--- a/assets/sass/modules/_btns.scss
+++ b/assets/sass/modules/_btns.scss
@@ -23,10 +23,11 @@ $od-secondary-button-action-text-color: #124a94;
 
 .button-wide,
 .button-wide.button-primary {
-  width: 100%;
+  // width: 100%;
   height: 50px;
   line-height: 48px;
   text-align: center;
+  border-radius: 4px;
 }
 
 .icon-button {
@@ -192,7 +193,12 @@ $od-secondary-button-action-text-color: #124a94;
   }
 }
 
-@mixin social-auth-button-template($bg-image, $icon-bg-color, $label-bg-color, $border-color) {
+@mixin social-auth-button-template(
+  $bg-image,
+  $icon-bg-color,
+  $label-bg-color,
+  $border-color
+) {
   background-color: $label-bg-color;
   background: $bg-image no-repeat 10px,
     linear-gradient(90deg, $icon-bg-color 50px, $label-bg-color 50px);
@@ -202,7 +208,11 @@ $od-secondary-button-action-text-color: #124a94;
   &:focus,
   &:hover {
     background: $bg-image no-repeat 10px,
-      linear-gradient(90deg, lighten($icon-bg-color, 3%) 50px, lighten($label-bg-color, 3%) 50px);
+      linear-gradient(
+        90deg,
+        lighten($icon-bg-color, 3%) 50px,
+        lighten($label-bg-color, 3%) 50px
+      );
   }
 }
 
@@ -217,7 +227,12 @@ $od-secondary-button-action-text-color: #124a94;
   }
 }
 
-@mixin piv-button-template($background-color, $border-color, $action-background-color, $action-border-color) {
+@mixin piv-button-template(
+  $background-color,
+  $border-color,
+  $action-background-color,
+  $action-border-color
+) {
   color: $border-color;
   border: 2px solid $border-color;
   background-color: $background-color;
@@ -232,13 +247,21 @@ $od-secondary-button-action-text-color: #124a94;
 }
 
 .social-auth-facebook-button {
-  @include social-auth-button-template(url('../img/icons/login/facebook_logo.png'),
-  $facebook-icon-bg-color, $facebook-label-bg-color, $facebook-border-color);
+  @include social-auth-button-template(
+    url("../img/icons/login/facebook_logo.png"),
+    $facebook-icon-bg-color,
+    $facebook-label-bg-color,
+    $facebook-border-color
+  );
 }
 
 .social-auth-google-button {
-  @include social-auth-button-template(url('../img/icons/login/google_logo.png'),
-  $google-icon-bg-color, $google-label-bg-color, $google-border-color);
+  @include social-auth-button-template(
+    url("../img/icons/login/google_logo.png"),
+    $google-icon-bg-color,
+    $google-label-bg-color,
+    $google-border-color
+  );
 
   background-position: 15px 50%, 0% 0%;
 
@@ -255,7 +278,7 @@ $od-secondary-button-action-text-color: #124a94;
 
 .social-auth-apple-button {
   @include social-auth-button-template(
-    url('../img/icons/login/apple_logo.png'),
+    url("../img/icons/login/apple_logo.png"),
     $apple-icon-bg-color,
     $apple-label-bg-color,
     $apple-border-color
@@ -274,18 +297,30 @@ $od-secondary-button-action-text-color: #124a94;
 }
 
 .social-auth-linkedin-button {
-  @include social-auth-button-template(url('../img/icons/login/linkedin_logo.png'),
-  $linkedin-icon-bg-color, $linkedin-label-bg-color, $linkedin-border-color);
+  @include social-auth-button-template(
+    url("../img/icons/login/linkedin_logo.png"),
+    $linkedin-icon-bg-color,
+    $linkedin-label-bg-color,
+    $linkedin-border-color
+  );
 }
 
 .social-auth-microsoft-button {
-  @include social-auth-button-template(url('../img/icons/login/microsoft_logo.png'),
-  $microsoft-icon-bg-color, $microsoft-label-bg-color, $microsoft-border-color);
+  @include social-auth-button-template(
+    url("../img/icons/login/microsoft_logo.png"),
+    $microsoft-icon-bg-color,
+    $microsoft-label-bg-color,
+    $microsoft-border-color
+  );
 }
 
 .social-auth-general-idp-button {
-  @include social-auth-button-template(url('../img/icons/login/default_logo.png'),
-  darken($button-bg-color, 5%), $button-bg-color, darken($button-bg-color, 22%));
+  @include social-auth-button-template(
+    url("../img/icons/login/default_logo.png"),
+    darken($button-bg-color, 5%),
+    $button-bg-color,
+    darken($button-bg-color, 22%)
+  );
   color: $dark-text-color;
 }
 .social-auth-general-idp-button.link-button {
@@ -293,9 +328,17 @@ $od-secondary-button-action-text-color: #124a94;
 }
 
 .default-custom-button {
-  @include default-custom-button-template($default-custom-button-background-color, $default-custom-button-border-color);
+  @include default-custom-button-template(
+    $default-custom-button-background-color,
+    $default-custom-button-border-color
+  );
 }
 
 .piv-button.link-button {
-  @include piv-button-template($piv-button-background-color, $piv-button-border-text-color, $piv-action-button-background-color, $piv-action-button-border-text-color);
+  @include piv-button-template(
+    $piv-button-background-color,
+    $piv-button-border-text-color,
+    $piv-action-button-background-color,
+    $piv-action-button-border-text-color
+  );
 }
