--- a/assets/sass/modules/_forms.scss
+++ b/assets/sass/modules/_forms.scss
@@ -4,7 +4,6 @@
   font-size: $font-size-header;
   line-height: 1.5;
   margin-top: 10px;
-  text-align: center;
   text-transform: none;
 
   + .o-form-explain {
@@ -22,8 +21,9 @@
 
   .button {
     display: block;
-    width: 100%;
+    width: auto;
     height: $button-height;
+    border-radius: 4px;
   }
 
   .button-success {
@@ -41,8 +41,8 @@
 }
 
 .o-form {
-
   .o-form-fieldset {
+    margin-top: 20px;
     &:last-child {
       margin-bottom: 15px;
     }
@@ -122,7 +122,6 @@
           font-size: $font-size-default;
         }
       }
-
     }
 
     .placeholder {
@@ -146,7 +145,8 @@
   .o-form-input {
     input[name="passCode"],
     input[name="nextPassCode"] {
-      font-family: "Anonymous Pro", "Andale Mono", "Courier New", "Courier", serif;
+      font-family: "Anonymous Pro", "Andale Mono", "Courier New", "Courier",
+        serif;
       font-size: 17px;
       letter-spacing: 1px;
     }
@@ -190,7 +190,6 @@
       opacity: 0.5;
     }
   }
-
 }
 
 .o-form-input-group .o-form-control {
@@ -223,7 +222,7 @@
 
 .custom-checkbox {
   label {
-    background-image: url('../img/ui/forms/checkbox-sign-in-widget.png');
+    background-image: url("../img/ui/forms/checkbox-sign-in-widget.png");
   }
 
   label.focus {
@@ -240,7 +239,7 @@
   only screen and (min-resolution: 2dppx) {
   .custom-checkbox {
     label {
-      background-image: url('../img/ui/forms/checkbox-sign-in-widget@2x.png');
+      background-image: url("../img/ui/forms/checkbox-sign-in-widget@2x.png");
       background-size: 50px 1155px;
     }
   }
